Improve dark mode contrast for teal text

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <body class="bg-slate-50 font-sans text-slate-800 antialiased transition-colors duration-300 dark:bg-surface-base dark:text-slate-100">
     <header class="topbar">
       <div class="container flex items-center justify-between px-6 py-4">
-        <a href="#" class="flex items-center gap-3 text-lg font-semibold text-brand-teal">
+        <a href="#" class="flex items-center gap-3 text-lg font-semibold text-brand-teal dark:text-accent-cyan">
           <span class="inline-flex h-10 w-10 items-center justify-center rounded-full bg-brand-teal text-white">DP</span>
           DentPro Colombia
         </a>
@@ -246,7 +246,7 @@
                 />
                 <div class="mt-4">
                   <h3 class="text-xl font-semibold text-slate-900 dark:text-white">Dr. Santiago Herrera</h3>
-                  <p class="text-sm text-brand-teal">Rehabilitación oral y estética</p>
+                  <p class="text-sm text-brand-teal dark:text-accent-cyan">Rehabilitación oral y estética</p>
                   <p class="mt-3 text-sm text-slate-600 dark:text-slate-200">
                     Más de 12 años creando sonrisas funcionales y estéticas con sistemas guiados por computador y sedación asistida.
                   </p>
@@ -260,7 +260,7 @@
                 />
                 <div class="mt-4">
                   <h3 class="text-xl font-semibold text-slate-900 dark:text-white">Dra. Natalia Rincón</h3>
-                  <p class="text-sm text-brand-teal">Ortodoncia invisible</p>
+                  <p class="text-sm text-brand-teal dark:text-accent-cyan">Ortodoncia invisible</p>
                   <p class="mt-3 text-sm text-slate-600 dark:text-slate-200">
                     Certificada Invisalign Diamond. Combina ortodoncia digital y acompañamiento personalizado para resultados rápidos.
                   </p>
@@ -274,7 +274,7 @@
                 />
                 <div class="mt-4">
                   <h3 class="text-xl font-semibold text-slate-900 dark:text-white">Dra. Camila Torres</h3>
-                  <p class="text-sm text-brand-teal">Odontopediatría integral</p>
+                  <p class="text-sm text-brand-teal dark:text-accent-cyan">Odontopediatría integral</p>
                   <p class="mt-3 text-sm text-slate-600 dark:text-slate-200">
                     Experta en acompañar a niños y adolescentes con técnicas de manejo del miedo y programas de prevención temprana.
                   </p>
