Add floating quick action buttons

--- a/index.html
+++ b/index.html
@@ -440,5 +440,25 @@
         </div>
       </section>
     </main>
+    <div class="floating-actions" role="region" aria-label="Accesos rápidos">
+      <a
+        href="https://wa.me/573104567890?text=Hola%20DentPro%2C%20quiero%20más%20información%20sobre%20sus%20servicios"
+        class="floating-action-btn floating-action-btn--whatsapp"
+        aria-label="Chatear por WhatsApp"
+        target="_blank"
+        rel="noopener"
+      >
+        <span class="material-symbols-rounded" aria-hidden="true">chat_bubble</span>
+        <span class="sr-only">Chatear por WhatsApp</span>
+      </a>
+      <a href="#agenda" class="floating-action-btn floating-action-btn--booking" aria-label="Reservar una cita">
+        <span class="material-symbols-rounded" aria-hidden="true">event_available</span>
+        <span class="sr-only">Reservar una cita</span>
+      </a>
+      <a href="tel:+573104567890" class="floating-action-btn floating-action-btn--call" aria-label="Llamar a DentPro">
+        <span class="material-symbols-rounded" aria-hidden="true">call</span>
+        <span class="sr-only">Llamar a DentPro</span>
+      </a>
+    </div>
   </body>
 </html>
