Refactor theme toggle to use accessible switch

--- a/index.html
+++ b/index.html
@@ -38,20 +38,19 @@
         <div class="flex items-center gap-4">
           <button
             type="button"
-            class="btn-secondary hidden lg:inline-flex text-sm"
+            class="theme-toggle hidden lg:inline-flex"
             id="darkModeToggle"
-            aria-pressed="false"
-            aria-label="Alternar modo oscuro"
+            role="switch"
+            aria-checked="false"
+            aria-label="Activar modo oscuro"
             data-label-light="Activar modo oscuro"
             data-label-dark="Activar modo claro"
           >
-            <span class="material-symbols-rounded text-lg transition dark:hidden" aria-hidden="true">dark_mode</span>
-            <span
-              class="material-symbols-rounded hidden text-lg text-amber-300 transition dark:inline"
-              aria-hidden="true"
-              >light_mode</span
-            >
-            <span class="font-semibold" data-theme-label>Activar modo oscuro</span>
+            <span class="theme-toggle-track" aria-hidden="true">
+              <span class="theme-toggle-icon" data-theme-icon="moon" aria-hidden="true">dark_mode</span>
+              <span class="theme-toggle-thumb"></span>
+              <span class="theme-toggle-icon" data-theme-icon="sun" aria-hidden="true">light_mode</span>
+            </span>
           </button>
           <a href="#agenda" class="btn-primary hidden lg:inline-flex">Agenda ahora</a>
           <button
@@ -71,21 +70,18 @@
           <a href="#contacto" class="transition hover:text-brand-teal dark:hover:text-accent-cyan">Contacto</a>
           <button
             type="button"
-            class="btn-secondary"
+            class="theme-toggle"
             id="darkModeToggleMobile"
-            aria-pressed="false"
-            aria-label="Alternar modo oscuro"
+            role="switch"
+            aria-checked="false"
+            aria-label="Activar modo oscuro"
             data-label-light="Activar modo oscuro"
             data-label-dark="Activar modo claro"
           >
-            <span class="flex items-center gap-2">
-              <span class="material-symbols-rounded text-lg transition dark:hidden" aria-hidden="true">dark_mode</span>
-              <span
-                class="material-symbols-rounded hidden text-lg text-amber-300 transition dark:inline"
-                aria-hidden="true"
-                >light_mode</span
-              >
-              <span class="font-semibold" data-theme-label>Activar modo oscuro</span>
+            <span class="theme-toggle-track" aria-hidden="true">
+              <span class="theme-toggle-icon" data-theme-icon="moon" aria-hidden="true">dark_mode</span>
+              <span class="theme-toggle-thumb"></span>
+              <span class="theme-toggle-icon" data-theme-icon="sun" aria-hidden="true">light_mode</span>
             </span>
           </button>
           <a href="#agenda" class="btn-primary">Agenda ahora</a>
