Add contact top bar to site header

--- a/index.html
+++ b/index.html
@@ -18,11 +18,64 @@
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,400,0,0"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css" />
     <link rel="stylesheet" href="css/tailwind.css" />
     <link rel="stylesheet" href="css/style.css" />
     <script type="module" src="js/main.js"></script>
   </head>
   <body class="bg-slate-50 font-sans text-slate-800 antialiased transition-colors duration-300 dark:bg-surface-base dark:text-slate-100">
+    <div class="border-b border-white/60 bg-white/80 text-sm text-slate-600 backdrop-blur-sm transition-colors duration-300 dark:border-surface-muted/60 dark:bg-surface-base/90 dark:text-slate-200">
+      <div class="container flex flex-col gap-3 px-6 py-3 lg:flex-row lg:items-center lg:justify-between">
+        <div class="flex flex-wrap items-center gap-x-6 gap-y-2">
+          <span class="inline-flex items-center gap-2 rounded-full bg-brand-light/80 px-3 py-1 text-xs font-semibold uppercase tracking-wide text-brand-indigo shadow-sm dark:bg-surface-muted/80 dark:text-accent-cyan">
+            <i class="ri-map-pin-2-line text-base" aria-hidden="true"></i>
+            Chía, Cundinamarca
+          </span>
+          <span class="inline-flex items-center gap-2 text-slate-500 dark:text-slate-300">
+            <i class="ri-time-line text-base" aria-hidden="true"></i>
+            Lunes a Sábado 7:00 a.m. - 8:00 p.m.
+          </span>
+          <a
+            href="https://wa.me/573212345678"
+            class="inline-flex items-center gap-2 font-semibold text-brand-teal transition hover:text-brand-indigo dark:text-accent-cyan dark:hover:text-accent-cyan/80"
+            target="_blank"
+            rel="noopener"
+          >
+            <i class="ri-whatsapp-line text-lg" aria-hidden="true"></i>
+            +57 321 234 5678
+          </a>
+        </div>
+        <div class="flex flex-wrap items-center gap-x-4 gap-y-2">
+          <a
+            href="mailto:agenda@dentprocol.com"
+            class="inline-flex items-center gap-2 font-medium text-slate-500 transition hover:text-brand-teal dark:text-slate-300 dark:hover:text-accent-cyan"
+          >
+            <i class="ri-mail-send-line text-base" aria-hidden="true"></i>
+            agenda@dentprocol.com
+          </a>
+          <div class="flex items-center gap-2 text-slate-400">
+            <a
+              href="https://www.instagram.com/dentprocol/"
+              class="inline-flex h-9 w-9 items-center justify-center rounded-full border border-slate-200/70 text-lg transition hover:-translate-y-0.5 hover:border-brand-teal hover:text-brand-teal dark:border-surface-muted/80 dark:text-slate-200 dark:hover:border-accent-cyan dark:hover:text-accent-cyan"
+              target="_blank"
+              rel="noopener"
+              aria-label="Instagram Dent Pro"
+            >
+              <i class="ri-instagram-line" aria-hidden="true"></i>
+            </a>
+            <a
+              href="https://www.facebook.com/"
+              class="inline-flex h-9 w-9 items-center justify-center rounded-full border border-slate-200/70 text-lg transition hover:-translate-y-0.5 hover:border-brand-teal hover:text-brand-teal dark:border-surface-muted/80 dark:text-slate-200 dark:hover:border-accent-cyan dark:hover:text-accent-cyan"
+              target="_blank"
+              rel="noopener"
+              aria-label="Facebook Dent Pro"
+            >
+              <i class="ri-facebook-circle-line" aria-hidden="true"></i>
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
     <header class="topbar">
       <div class="container flex items-center justify-between px-6 py-4">
         <a href="#" class="flex items-center gap-3 text-lg font-semibold text-brand-teal dark:text-accent-cyan">
