Simplify theme toggle handling

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         <div class="flex items-center gap-4">
           <button
             type="button"
-            class="theme-toggle hidden lg:inline-flex"
+            class="theme-toggle inline-flex lg:inline-flex"
             id="darkModeToggle"
             role="switch"
             aria-checked="false"
@@ -121,22 +121,6 @@
           <a href="#especialistas" class="transition hover:text-brand-teal dark:hover:text-accent-cyan">Especialistas</a>
           <a href="#agenda" class="transition hover:text-brand-teal dark:hover:text-accent-cyan">Agenda tu cita</a>
           <a href="#contacto" class="transition hover:text-brand-teal dark:hover:text-accent-cyan">Contacto</a>
-          <button
-            type="button"
-            class="theme-toggle"
-            id="darkModeToggleMobile"
-            role="switch"
-            aria-checked="false"
-            aria-label="Activar modo oscuro"
-            data-label-light="Activar modo oscuro"
-            data-label-dark="Activar modo claro"
-          >
-            <span class="theme-toggle-track" aria-hidden="true">
-              <span class="theme-toggle-icon" data-theme-icon="sun" aria-hidden="true">light_mode</span>
-              <span class="theme-toggle-thumb"></span>
-              <span class="theme-toggle-icon" data-theme-icon="moon" aria-hidden="true">dark_mode</span>
-            </span>
-          </button>
           <a href="#agenda" class="btn-primary">Agenda ahora</a>
         </nav>
       </div>
