--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
     <main>
       <section class="hero overflow-hidden bg-hero-light py-24 transition-colors duration-500 dark:bg-hero-dark">
         <div class="container grid items-center gap-16 px-6 lg:grid-cols-2">
-          <div class="space-y-8">
+          <div class="relative z-10 space-y-8" data-hero-text-panel>
             <span class="inline-flex items-center gap-2 rounded-full bg-white/70 px-4 py-2 text-sm font-semibold uppercase tracking-wide text-brand-indigo shadow-sm dark:bg-surface-elevated/80 dark:text-accent-cyan">
               Calidad internacional
             </span>
@@ -158,38 +158,40 @@
               </div>
             </dl>
           </div>
-          <div class="relative">
-            <div class="rounded-3xl border border-white/40 bg-white/80 p-6 shadow-xl shadow-brand-teal/20 backdrop-blur transition-colors duration-500 dark:border-accent-cyan/10 dark:bg-surface-elevated/70 dark:shadow-surface-dark">
-              <div class="aspect-[4/5] overflow-hidden rounded-2xl bg-gradient-to-br from-brand-teal via-brand-sky to-brand-indigo dark:from-accent-cyan dark:via-brand-teal dark:to-brand-midnight">
-                <img
-                  src="https://images.unsplash.com/photo-1588776814546-1ffcf47267a5?auto=format&fit=crop&w=900&q=80"
-                  alt="Odontóloga atendiendo a paciente"
-                  class="h-full w-full object-cover"
-                />
-              </div>
-              <div class="mt-6 grid gap-4 rounded-2xl bg-white/90 p-6 text-sm shadow-lg transition-colors duration-500 dark:bg-surface-muted/90 dark:text-slate-100 dark:shadow-surface-dark">
-                <p class="font-semibold text-brand-teal dark:text-accent-cyan">Testimonio real</p>
-                <p class="text-slate-600 dark:text-slate-200">
-                  “Me siento segura y acompañada en cada cita. El equipo de DentPro es cercano y profesional. ¡Mi sonrisa nunca estuvo mejor!”
-                </p>
-                <div class="flex items-center gap-4">
-                  <div class="h-12 w-12 overflow-hidden rounded-full">
-                    <img
-                      src="https://images.unsplash.com/photo-1544723795-3fb6469f5b39?auto=format&fit=crop&w=200&q=80"
-                      alt="Paciente satisfecha"
-                      class="h-full w-full object-cover"
-                    />
-                  </div>
-                  <div>
-                    <p class="font-semibold text-slate-900 dark:text-white">Laura Gómez</p>
-                    <p class="text-xs text-slate-500 dark:text-slate-300">Paciente de ortodoncia invisible</p>
+          <div id="heroLiquidHost" class="relative isolate">
+            <div class="relative z-10" data-liquid-panel>
+              <div class="rounded-3xl border border-white/40 bg-white/80 p-6 shadow-xl shadow-brand-teal/20 backdrop-blur transition-colors duration-500 dark:border-accent-cyan/10 dark:bg-surface-elevated/70 dark:shadow-surface-dark">
+                <div class="aspect-[4/5] overflow-hidden rounded-2xl bg-gradient-to-br from-brand-teal via-brand-sky to-brand-indigo dark:from-accent-cyan dark:via-brand-teal dark:to-brand-midnight">
+                  <img
+                    src="https://images.unsplash.com/photo-1588776814546-1ffcf47267a5?auto=format&fit=crop&w=900&q=80"
+                    alt="Odontóloga atendiendo a paciente"
+                    class="h-full w-full object-cover"
+                  />
+                </div>
+                <div class="mt-6 grid gap-4 rounded-2xl bg-white/90 p-6 text-sm shadow-lg transition-colors duration-500 dark:bg-surface-muted/90 dark:text-slate-100 dark:shadow-surface-dark">
+                  <p class="font-semibold text-brand-teal dark:text-accent-cyan">Testimonio real</p>
+                  <p class="text-slate-600 dark:text-slate-200">
+                    “Me siento segura y acompañada en cada cita. El equipo de DentPro es cercano y profesional. ¡Mi sonrisa nunca estuvo mejor!”
+                  </p>
+                  <div class="flex items-center gap-4">
+                    <div class="h-12 w-12 overflow-hidden rounded-full">
+                      <img
+                        src="https://images.unsplash.com/photo-1544723795-3fb6469f5b39?auto=format&fit=crop&w=200&q=80"
+                        alt="Paciente satisfecha"
+                        class="h-full w-full object-cover"
+                      />
+                    </div>
+                    <div>
+                      <p class="font-semibold text-slate-900 dark:text-white">Laura Gómez</p>
+                      <p class="text-xs text-slate-500 dark:text-slate-300">Paciente de ortodoncia invisible</p>
+                    </div>
                   </div>
                 </div>
               </div>
-            </div>
-            <div class="floating-card rounded-2xl bg-white/90 text-sm text-slate-700 shadow-glow backdrop-blur dark:border dark:border-accent-cyan/15 dark:bg-surface-elevated/90 dark:text-slate-100 dark:shadow-glow-dark">
-              <p class="text-xs uppercase tracking-wide text-slate-500 dark:text-accent-cyan/80">Indicadores clínicos</p>
-              <p class="text-2xl font-bold text-brand-indigo dark:text-accent-cyan">+4.800 sonrisas rehabilitadas</p>
+              <div class="floating-card rounded-2xl bg-white/90 text-sm text-slate-700 shadow-glow backdrop-blur dark:border dark:border-accent-cyan/15 dark:bg-surface-elevated/90 dark:text-slate-100 dark:shadow-glow-dark" data-liquid-icon>
+                <p class="text-xs uppercase tracking-wide text-slate-500 dark:text-accent-cyan/80">Indicadores clínicos</p>
+                <p class="text-2xl font-bold text-brand-indigo dark:text-accent-cyan">+4.800 sonrisas rehabilitadas</p>
+              </div>
             </div>
           </div>
         </div>
