feat: add shader metrics panel and accessibility updates

--- a/index.html
+++ b/index.html
@@ -158,7 +158,16 @@
               </div>
             </dl>
           </div>
-          <div id="heroLiquidHost" class="relative isolate">
+          <div
+            id="heroLiquidHost"
+            class="relative isolate"
+            data-liquid-blur="4.5"
+            data-liquid-refraction="0.08"
+            data-liquid-texture="0.68"
+            data-liquid-pattern="0.45"
+            data-liquid-alpha="0.62"
+            data-liquid-metrics="available"
+          >
             <div class="relative z-10" data-liquid-panel>
               <div class="rounded-3xl border border-white/40 bg-white/80 p-6 shadow-xl shadow-brand-teal/20 backdrop-blur transition-colors duration-500 dark:border-accent-cyan/10 dark:bg-surface-elevated/70 dark:shadow-surface-dark">
                 <div class="aspect-[4/5] overflow-hidden rounded-2xl bg-gradient-to-br from-brand-teal via-brand-sky to-brand-indigo dark:from-accent-cyan dark:via-brand-teal dark:to-brand-midnight">
