--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
           </div>
           <div class="slider" data-slider>
             <div class="slider-track" id="specialistsTrack">
-              <article class="card specialist">
+              <article class="card specialist" data-liquid-experiment="specialist-card-v1">
                 <img
                   src="https://images.unsplash.com/photo-1629909613654-28e377c37b09?auto=format&fit=crop&w=600&q=80"
                   alt="Odontólogo especialista"
