--- a/index.html
+++ b/index.html
@@ -158,17 +158,8 @@
               </div>
             </dl>
           </div>
-          <div
-            id="heroLiquidHost"
-            class="relative isolate"
-            data-liquid-blur="4.5"
-            data-liquid-refraction="0.08"
-            data-liquid-texture="0.68"
-            data-liquid-pattern="0.45"
-            data-liquid-alpha="0.62"
-            data-liquid-metrics="available"
-          >
-            <div class="relative z-10" data-liquid-panel>
+          <div class="relative isolate">
+            <div class="relative z-10">
               <div class="rounded-3xl border border-white/40 bg-white/80 p-6 shadow-xl shadow-brand-teal/20 backdrop-blur transition-colors duration-500 dark:border-accent-cyan/10 dark:bg-surface-elevated/70 dark:shadow-surface-dark">
                 <div class="aspect-[4/5] overflow-hidden rounded-2xl bg-gradient-to-br from-brand-teal via-brand-sky to-brand-indigo dark:from-accent-cyan dark:via-brand-teal dark:to-brand-midnight">
                   <img
@@ -197,7 +188,7 @@
                   </div>
                 </div>
               </div>
-              <div class="floating-card rounded-2xl bg-white/90 text-sm text-slate-700 shadow-glow backdrop-blur dark:border dark:border-accent-cyan/15 dark:bg-surface-elevated/90 dark:text-slate-100 dark:shadow-glow-dark" data-liquid-icon>
+              <div class="floating-card rounded-2xl bg-white/90 text-sm text-slate-700 shadow-glow backdrop-blur dark:border dark:border-accent-cyan/15 dark:bg-surface-elevated/90 dark:text-slate-100 dark:shadow-glow-dark">
                 <p class="text-xs uppercase tracking-wide text-slate-500 dark:text-accent-cyan/80">Indicadores clínicos</p>
                 <p class="text-2xl font-bold text-brand-indigo dark:text-accent-cyan">+4.800 sonrisas rehabilitadas</p>
               </div>
@@ -282,7 +273,7 @@
           </div>
           <div class="slider" data-slider>
             <div class="slider-track" id="specialistsTrack">
-              <article class="card specialist" data-liquid-experiment="specialist-card-v1">
+              <article class="card specialist">
                 <img
                   src="https://images.unsplash.com/photo-1629909613654-28e377c37b09?auto=format&fit=crop&w=600&q=80"
                   alt="Odontólogo especialista"
