--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
           </div>
           <div class="relative isolate">
             <div class="relative z-10">
-              <div class="rounded-3xl border border-white/40 bg-white/80 p-6 shadow-xl shadow-brand-teal/20 backdrop-blur transition-colors duration-500 dark:border-accent-cyan/10 dark:bg-surface-elevated/70 dark:shadow-surface-dark">
+              <div class="card border-white/40 bg-white/80 p-6 shadow-xl shadow-brand-teal/20 backdrop-blur transition-colors duration-500 dark:!border-accent-cyan/10 dark:!bg-surface-elevated/70 dark:shadow-surface-dark hover:!translate-y-0 hover:!shadow-xl lg:p-8">
                 <div class="aspect-[4/5] overflow-hidden rounded-2xl bg-gradient-to-br from-brand-teal via-brand-sky to-brand-indigo dark:from-accent-cyan dark:via-brand-teal dark:to-brand-midnight">
                   <img
                     src="https://images.unsplash.com/photo-1588776814546-1ffcf47267a5?auto=format&fit=crop&w=900&q=80"
@@ -168,7 +168,7 @@
                     class="h-full w-full object-cover"
                   />
                 </div>
-                <div class="mt-6 grid gap-4 rounded-2xl bg-white/90 p-6 text-sm shadow-lg transition-colors duration-500 dark:bg-surface-muted/90 dark:text-slate-100 dark:shadow-surface-dark">
+                <div class="card mt-6 grid gap-4 rounded-2xl bg-white/90 p-6 text-sm !shadow-lg transition-colors duration-500 dark:!bg-surface-muted/90 dark:text-slate-100 hover:!translate-y-0 hover:!shadow-lg">
                   <p class="font-semibold text-brand-teal dark:text-accent-cyan">Testimonio real</p>
                   <p class="text-slate-600 dark:text-slate-200">
                     “Me siento segura y acompañada en cada cita. El equipo de DentPro es cercano y profesional. ¡Mi sonrisa nunca estuvo mejor!”
@@ -188,7 +188,7 @@
                   </div>
                 </div>
               </div>
-              <div class="floating-card rounded-2xl bg-white/90 text-sm text-slate-700 shadow-glow backdrop-blur dark:border dark:border-accent-cyan/15 dark:bg-surface-elevated/90 dark:text-slate-100 dark:shadow-glow-dark">
+              <div class="card mx-auto mt-6 w-full max-w-xs space-y-2 border-white/60 p-5 text-center text-sm text-slate-700 !shadow-glow backdrop-blur dark:!border-accent-cyan/15 dark:!bg-surface-elevated/90 dark:text-slate-100 dark:shadow-glow-dark sm:absolute sm:-bottom-12 sm:right-6 sm:mx-0 sm:mt-0 sm:text-left sm:shadow-lg sm:p-6 hover:!translate-y-0 hover:!shadow-glow">
                 <p class="text-xs uppercase tracking-wide text-slate-500 dark:text-accent-cyan/80">Indicadores clínicos</p>
                 <p class="text-2xl font-bold text-brand-indigo dark:text-accent-cyan">+4.800 sonrisas rehabilitadas</p>
               </div>
