Add DentPro logo to navigation and site favicon

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css" />
+    <link rel="icon" type="image/svg+xml" href="img/dentpro-logo.svg" />
     <link rel="stylesheet" href="css/tailwind.css" />
     <link rel="stylesheet" href="css/style.css" />
     <script type="module" src="js/main.js"></script>
@@ -116,7 +117,7 @@
     <header class="topbar">
       <div class="container flex items-center justify-between px-6 py-4">
         <a href="#" class="flex items-center gap-3 text-lg font-semibold text-brand-teal dark:text-accent-cyan">
-          <span class="inline-flex h-10 w-10 items-center justify-center rounded-full bg-brand-teal text-white">DP</span>
+          <img src="img/dentpro-logo.svg" alt="DentPro Colombia" class="h-10 w-10 flex-shrink-0 rounded-full" />
           DentPro Colombia
         </a>
         <nav class="hidden items-center gap-8 text-sm font-semibold text-slate-600 lg:flex dark:text-slate-200">
