--- a/index.html
+++ b/index.html
@@ -180,8 +180,8 @@
         pero los botones enlazan con el formulario y el listado de servicios gestionados en js/main.js.
       -->
       <!-- Sección hero principal -->
-      <section class="hero overflow-hidden bg-hero-light py-24 transition-colors duration-500 dark:bg-hero-dark">
-        <div class="container grid items-center gap-16 px-6 lg:grid-cols-2">
+      <section class="hero overflow-hidden bg-hero-light py-12 sm:py-12 md:py-16 lg:py-20 transition-colors duration-500 dark:bg-hero-dark">
+        <div class="container grid items-center gap-12 md:gap-14 lg:grid-cols-2 lg:gap-16 px-6">
           <!--
             Panel de texto del hero (`data-hero-text-panel`): agrupa la narrativa principal y permite enlazar
             potenciales animaciones o efectos progresivos desde CSS/JS sin acoplarse al DOM. Se posiciona sobre el
@@ -216,7 +216,7 @@
               </div>
             </dl>
           </div>
-          <div class="relative isolate">
+          <div class="relative isolate lg:max-h-[640px] xl:max-h-[680px] lg:scale-[0.98] xl:scale-100">
             <div class="relative z-10">
               <div class="card border-white/40 bg-white/80 p-6 shadow-xl shadow-brand-teal/20 backdrop-blur transition-colors duration-500 dark:!border-accent-cyan/10 dark:!bg-surface-elevated/70 dark:shadow-surface-dark hover:!translate-y-0 hover:!shadow-xl lg:p-8">
                 <div class="aspect-[4/5] overflow-hidden rounded-2xl bg-gradient-to-br from-brand-teal via-brand-sky to-brand-indigo dark:from-accent-cyan dark:via-brand-teal dark:to-brand-midnight">
