--- a/index.html
+++ b/index.html
@@ -123,6 +123,13 @@
           <a href="#servicios" class="transition hover:text-brand-teal dark:hover:text-accent-cyan">Servicios</a>
           <a href="#especialistas" class="transition hover:text-brand-teal dark:hover:text-accent-cyan">Especialistas</a>
           <a href="#agenda" class="transition hover:text-brand-teal dark:hover:text-accent-cyan">Agenda tu cita</a>
+          <a
+            href="/login"
+            class="inline-flex items-center gap-2 transition hover:text-brand-teal dark:hover:text-accent-cyan"
+          >
+            <i class="ri-user-line text-lg" aria-hidden="true"></i>
+            <span>Iniciar sesión</span>
+          </a>
           <a href="#contacto" class="transition hover:text-brand-teal dark:hover:text-accent-cyan">Contacto</a>
         </nav>
         <div class="flex items-center gap-4">
@@ -152,6 +159,13 @@
             </span>
           </button>
           <a href="#agenda" class="btn-primary hidden lg:inline-flex">Agenda ahora</a>
+          <a
+            href="/login"
+            class="inline-flex h-11 w-11 items-center justify-center rounded-full border border-slate-200 text-lg text-slate-500 transition hover:-translate-y-0.5 hover:border-brand-teal hover:text-brand-teal dark:border-surface-muted dark:text-slate-200 dark:hover:border-accent-cyan dark:hover:text-accent-cyan"
+            aria-label="Ir a login"
+          >
+            <i class="ri-user-line" aria-hidden="true"></i>
+          </a>
           <button
             class="inline-flex h-11 w-11 items-center justify-center rounded-full border border-slate-200 lg:hidden"
             id="mobileMenuBtn"
@@ -166,8 +180,22 @@
           <a href="#servicios" class="transition hover:text-brand-teal dark:hover:text-accent-cyan">Servicios</a>
           <a href="#especialistas" class="transition hover:text-brand-teal dark:hover:text-accent-cyan">Especialistas</a>
           <a href="#agenda" class="transition hover:text-brand-teal dark:hover:text-accent-cyan">Agenda tu cita</a>
+          <a
+            href="/login"
+            class="inline-flex items-center gap-2 transition hover:text-brand-teal dark:hover:text-accent-cyan"
+          >
+            <i class="ri-user-line text-lg" aria-hidden="true"></i>
+            <span>Iniciar sesión</span>
+          </a>
           <a href="#contacto" class="transition hover:text-brand-teal dark:hover:text-accent-cyan">Contacto</a>
           <a href="#agenda" class="btn-primary">Agenda ahora</a>
+          <a
+            href="/login"
+            class="inline-flex h-11 w-11 items-center justify-center rounded-full border border-slate-200 text-lg text-slate-500 transition hover:-translate-y-0.5 hover:border-brand-teal hover:text-brand-teal dark:border-surface-muted dark:text-slate-200 dark:hover:border-accent-cyan dark:hover:text-accent-cyan"
+            aria-label="Ir a login"
+          >
+            <i class="ri-user-line" aria-hidden="true"></i>
+          </a>
         </nav>
       </div>
     </header>
