Add social metadata to landing page

--- a/index.html
+++ b/index.html
@@ -4,10 +4,28 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>DentPro Colombia | Sonrisas que inspiran confianza</title>
+    <link rel="canonical" href="https://www.dentprocolombia.com/" />
     <meta
       name="description"
       content="Clínicas DentPro Colombia: odontología integral, especialistas certificados y tecnología avanzada para cuidar tu sonrisa."
     />
+    <meta property="og:title" content="DentPro Colombia | Sonrisas que inspiran confianza" />
+    <meta
+      property="og:description"
+      content="Clínicas DentPro Colombia: odontología integral, especialistas certificados y tecnología avanzada para cuidar tu sonrisa."
+    />
+    <meta property="og:url" content="https://www.dentprocolombia.com/" />
+    <meta property="og:image" content="https://www.dentprocolombia.com/images/og-dentpro.jpg" />
+    <meta property="og:locale" content="es_CO" />
+    <meta property="og:type" content="website" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="DentPro Colombia | Sonrisas que inspiran confianza" />
+    <meta
+      name="twitter:description"
+      content="Clínicas DentPro Colombia: odontología integral, especialistas certificados y tecnología avanzada para cuidar tu sonrisa."
+    />
+    <meta name="twitter:url" content="https://www.dentprocolombia.com/" />
+    <meta name="twitter:image" content="https://www.dentprocolombia.com/images/og-dentpro.jpg" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
