Remove hero overflow clipping

--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
         pero los botones enlazan con el formulario y el listado de servicios gestionados en js/main.js.
       -->
       <!-- Sección hero principal -->
-      <section class="hero overflow-hidden bg-hero-light py-12 sm:py-12 md:py-16 lg:py-20 transition-colors duration-500 dark:bg-hero-dark">
+      <section class="hero bg-hero-light py-12 sm:py-12 md:py-16 lg:py-20 transition-colors duration-500 dark:bg-hero-dark">
         <div class="container grid items-center gap-12 md:gap-14 lg:grid-cols-2 lg:gap-16 px-6">
           <!--
             Panel de texto del hero (`data-hero-text-panel`): agrupa la narrativa principal y permite enlazar
